--- a/views/home/index.html
+++ b/views/home/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Announcements - STH</title>
+    <title>Home - STH</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="../css/bootstrap.min.css" rel="stylesheet">
@@ -51,8 +51,8 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Menu</a>
-                        <h1>Announcements</h1>
-                        <p>Any announcements can and will go here!</p>
+                        <h1>Home</h1>
+                        <p>Home of the SmashTheHouse site!</p>
                     </div>
                 </div>
             </div>
