--- a/views/index.html
+++ b/views/index.html
@@ -9,13 +9,13 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Simple Sidebar - Start Bootstrap Template</title>
+    <title>Login - STH</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="../css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="css/simple-sidebar.css" rel="stylesheet">
+    <link href="../css/simple-sidebar.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -23,24 +23,18 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-	
-	<!-- jQuery -->
-    <script src="js/jquery.js" type="text/javascript"></script>
 
-	<!-- Bootstrap Core JavaScript -->
-    <script src="js/bootstrap.min.js"></script>
-	
 </head>
 
 <body>
-	<div id="fb-root"></div>
-	<div id="wrapper" class="toggled">
+
+    <div id="wrapper" class="toggled">
 
         <!-- Sidebar -->
         <div id="sidebar-wrapper">
             <ul class="sidebar-nav">
                 <li class="sidebar-brand">
-                    <a href="/">
+                    <a href="/home/">
                         Home
                     </a>
                 </li>
@@ -56,11 +50,12 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-12">
-					    <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Menu</a>
-                        <h1>Home</h1>
-                        <p>This is the home page!</p>
-						<div class="fb-login-button" data-max-rows="1" data-size="medium" data-show-faces="false" data-auto-logout-link="true"></div>
-					</div>
+                        <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Menu</a>
+                        <h1>Login</h1>
+                        <p>Login Here via Facebook</p>
+						<!--Please please please remove client id-->
+						<a href="https://www.facebook.com/v2.8/dialog/oauth?client_id=430107553824095&redirect_uri=https://smashthehouse.localtunnel.me/" style="color:inherit;"><input type="button" value="Login"/></a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -68,11 +63,22 @@
 
     </div>
     <!-- /#wrapper -->
-	
-	
-	<!-- Client.js Script -->
-    <script src="client.js" text="text/javascript"></script>
-	
+
+    <!-- jQuery -->
+    <script src="../js/jquery.js"></script>
+
+    <!-- Bootstrap Core JavaScript -->
+    <script src="../js/bootstrap.min.js"></script>
+
+    <!-- Menu Toggle Script -->
+    <!--script src="../js/index.js"></script-->
+    <script>
+	$("#menu-toggle").click(function(e) {
+        e.preventDefault();
+        $("#wrapper").toggleClass("toggled");
+    });
+	</script>
+
 </body>
 
 </html>
