--- a/views/status/index.html
+++ b/views/status/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Home - STH</title>
+    <title>Status - STH</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="../css/bootstrap.min.css" rel="stylesheet">
@@ -31,7 +31,7 @@
     <div id="wrapper" class="toggled">
 
         <!-- Sidebar -->
-        <div id="sidebar-wrapper" src="../sidebar.html"></div>
+        <div id="sidebar-wrapper" w3-html-include="../sidebar.html"></div>
         <!-- /#sidebar-wrapper -->
 
         <!-- Page Content -->
@@ -40,8 +40,9 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Menu</a>
-                        <h1>Home</h1>
-                        <p>Home of the SmashTheHouse site!</p>
+                        <h1>Status</h1>
+                        <p>Up time</p>
+                        <p>IP address</p>
                     </div>
                 </div>
             </div>
