--- a/views/index.html
+++ b/views/index.html
@@ -6,16 +6,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, shrink-to-fit=no, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
 
     <title>Login - STH</title>
-
-    <!-- Bootstrap Core CSS -->
-    <link href="../css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Custom CSS -->
-    <link href="../css/simple-sidebar.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -23,46 +15,21 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+	
+	<link rel="stylesheet" type="text/css" href="css/client.css">
 
 </head>
 
 <body>
-
-    <div id="wrapper" class="toggled">
-
-        <!-- Sidebar -->
-        <div id="sidebar-wrapper" class="include" src="/html-includes/sidebar.html"></div>
-        <!-- /#sidebar-wrapper -->
-
-        <!-- Page Content -->
-        <div id="page-content-wrapper">
-            <div class="container-fluid">
-                <div class="row">
-                    <div class="col-lg-12">
-                        <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Menu</a>
-                        <h1>Login</h1>
-                        <p>Login Here via Facebook</p>
-						<!--Please please please remove client id-->
-						<a href="https://www.facebook.com/v2.8/dialog/oauth?client_id=430107553824095&redirect_uri=https://smashthehouse.localtunnel.me/" style="color:inherit;"><input type="button" value="Login"/></a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- /#page-content-wrapper -->
-
-    </div>
-    <!-- /#wrapper -->
-
-    <!-- jQuery -->
-    <script src="../js/jquery.js"></script>
-
-    <!-- Bootstrap Core JavaScript -->
-    <script src="../js/bootstrap.min.js"></script>
-
-    <!-- Menu Toggle Script -->
-    <script src="../js/client.js"></script>
-    
-
+	<svg xmlns="http://www.w3.org/2000/svg" width="100%" height="700"
+			xmlns:xlink="http://www.w3.org/1999/xlink">
+		<circle cx="50%" cy="400" r="50" fill="blue">
+		
+	</svg>
+	
 </body>
+
+
+
 
 </html>
