--- a/views/css/client.css
+++ b/views/css/client.css
@@ -1,10 +1,10 @@
 @keyframes circle-swell {
-	from {r:50;}
-	to {r:50*1.1;}
+	from {r:45%;}
+	to {r:50%;}
 }
 
 circle:hover{
-	r:calc(50*1.1);
+	r:50%;
 	animation-name: circle-swell;
 	animation-duration: 0.5s;
 }
