--- a/views/index.html
+++ b/views/index.html
@@ -21,10 +21,12 @@
 </head>
 
 <body>
-	<svg xmlns="http://www.w3.org/2000/svg" width="100%" height="700"
+	<svg xmlns="http://www.w3.org/2000/svg" width="100%" height="500"
 			xmlns:xlink="http://www.w3.org/1999/xlink">
-		<circle cx="50%" cy="400" r="50" fill="blue">
-		
+		<svg width="100" height="100">
+			<circle cx="50%" cy="50%" r="45%" fill="blue"/>
+			<text x="25%" y="55%" font-size="14pt">Button</text>
+		</svg>
 	</svg>
 	
 </body>
