--- a/views/index.html
+++ b/views/index.html
@@ -23,7 +23,7 @@
 <body>
 	<svg xmlns="http://www.w3.org/2000/svg" width="100%" height="500"
 			xmlns:xlink="http://www.w3.org/1999/xlink">
-		<svg width="100" height="100">
+		<svg id="nav-button" width="100" height="100">
 			<circle stroke-width="5" stroke="green" cx="50%" cy="50%" r="40%" fill="blue"/>
 			<text x="25%" y="55%" font-size="14pt">Button</text>
 		</svg>
