made button better

--- a/views/css/client.css
+++ b/views/css/client.css
@@ -1,10 +1,22 @@
 @keyframes circle-swell {
-	from {r:40%;}
-	to {r:45%;}
+	0% {r:30%;}
+	60% {r:45%;}
+	100% {r:30%;}
 }
 
 #nav-button:hover > circle{
-	r:45%;
+	r:30%;
+	animation-name: circle-swell;
+	animation-duration: 0.4s;
+	opacity: 1;
+}
+
+/*
+#nav-button:not( :hover) > circle{
+	r:30%;
 	animation-name: circle-swell;
 	animation-duration: 0.5s;
+	animation-direction: reverse;
 }
+*/
+
