--- a/views/index.html
+++ b/views/index.html
@@ -25,9 +25,8 @@
 			xmlns:xlink="http://www.w3.org/1999/xlink">
 		<svg id="nav-button" width="150" height="150">
 			<circle cx="50%" cy="50%" r="30%" fill="red" opacity="0.5"/>
-			<text x="50%" y="50%" text-anchor="middle" dominant-baseline="central" font-size="14pt">Button</text>
+			<text x="50%" y="50%" text-anchor="middle" dominant-baseline="central" font-size="14pt" opacity="0.7">Button</text>
 		</svg>
-		
 	</svg>
 	
 </body>
