--- a/views/index.html
+++ b/views/index.html
@@ -21,13 +21,27 @@
 </head>
 
 <body>
-	<svg xmlns="http://www.w3.org/2000/svg" width="100%" height="500"
-			xmlns:xlink="http://www.w3.org/1999/xlink">
-		<svg id="nav-button" width="150" height="150">
+	<div class="dev-box" width="400" height="200" position="relative">
+	<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" display="block" width="100%" height="900" position="absolute">
+		<use x="100" y="-100" xlink:href="svg/circleornateframe.svg#svg3760" />
+		<svg id="nav-button" x="20%" y="40%" width="150" height="150">
+			<circle cx="50%" cy="50%" r="30%" fill="red" opacity="0.5"/>
+			<text x="50%" y="50%" text-anchor="middle" dominant-baseline="central" font-size="14pt" opacity="0.7">Button</text>
+		</svg>
+		<svg id="nav-button" x="30%" y="30%" width="150" height="150">
+			<circle cx="50%" cy="50%" r="30%" fill="red" opacity="0.5"/>
+			<text x="50%" y="50%" text-anchor="middle" dominant-baseline="central" font-size="14pt" opacity="0.7">Button</text>
+		</svg>
+		<svg id="nav-button" x="40%" y="40%" width="150" height="150">
+			<circle cx="50%" cy="50%" r="30%" fill="red" opacity="0.5"/>
+			<text x="50%" y="50%" text-anchor="middle" dominant-baseline="central" font-size="14pt" opacity="0.7">Button</text>
+		</svg>
+		<svg id="nav-button" x="50%" y="30%" width="150" height="150">
 			<circle cx="50%" cy="50%" r="30%" fill="red" opacity="0.5"/>
 			<text x="50%" y="50%" text-anchor="middle" dominant-baseline="central" font-size="14pt" opacity="0.7">Button</text>
 		</svg>
 	</svg>
+	</div>
 	
 </body>
 
