--- a/views/css/client.css
+++ b/views/css/client.css
@@ -1,5 +1,7 @@
 @keyframes circle-swell {
-	0% {r:30%;}
+	0% {
+		r:30%;
+	}
 	60% {r:40%;}
 	100% {r:30%;}
 }
@@ -7,6 +9,25 @@
 .dev-box{
 	border: 1px solid red;
 	overflow: scroll;
+}
+
+#nav-button > circle{
+	cx:50%;
+	cy:50%; 
+	r:30%;
+	fill:white;
+	
+	stroke:black;
+	stroke-width:1px;
+	stroke-dasharray:1,1,2,3,5,8;
+}
+
+
+#nav-button > text{
+	text-anchor:middle;
+	dominant-baseline:central;
+	font-size:14pt;
+	opacity:0.7;
 }
 
 #nav-button:hover > circle{
