--- a/views/index.html
+++ b/views/index.html
@@ -22,22 +22,22 @@
 
 <body>
 	<div class="dev-box" width="400" height="200" position="relative">
-	<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" display="block" width="100%" height="900" position="absolute">
+	<svg id="svg-container" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" display="block" width="100%" height="800" position="absolute">
 		<use x="100" y="-100" xlink:href="svg/circleornateframe.svg#svg3760" />
 		
-		<svg id="nav-button" x="20%" y="40%" width="150" height="150">
+		<svg id="nav-button" x="25%" y="45%" width="150" height="150">
 			<circle/>
 			<text x="50%" y="50%">Button</text>
 		</svg>
-		<svg id="nav-button" x="30%" y="30%" width="150" height="150">
+		<svg id="nav-button" x="35%" y="35%" width="150" height="150">
 			<circle/>
 			<text x="50%" y="50%">Button</text>
 		</svg>
-		<svg id="nav-button" x="40%" y="40%" width="150" height="150">
+		<svg id="nav-button" x="45%" y="45%" width="150" height="150">
 			<circle/>
 			<text x="50%" y="50%">Button</text>
 		</svg>
-		<svg id="nav-button" x="50%" y="30%" width="150" height="150">
+		<svg id="nav-button" x="55%" y="35%" width="150" height="150">
 			<circle/>
 			<text x="50%" y="50%">Button</text>
 		</svg>
