Began basic formatting

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -5,4 +5,8 @@ html
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     div(class="nav-bar")
-    block content
+      div(class="nav-link") main
+      div(class="nav-link") chat
+      div(class="nav-link") mo
+    div(class="body-container")
+      block content
