--- a/views/layout.pug
+++ b/views/layout.pug
@@ -4,9 +4,10 @@ html
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
-    div(class="nav-bar")
-      div(class="nav-link") main
-      div(class="nav-link") chat
-      div(class="nav-link") mo
+    div(class="header-bar")
+      div(class="header-link") main
+      div(class="header-link") chat
+      div(class="header-link") mo
+    div(class="side-bar") test
     div(class="body-container")
       block content
