Fixed stylesheet directory organization

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,7 +2,7 @@ doctype html
 html
   head
     title= title
-    link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel='stylesheet', href='general-style.css')
   body
     div(class="header-bar")
       div(class="header-link") main
