--- a/public/stylesheets/scss/general-style.scss
+++ b/public/stylesheets/scss/general-style.scss
@@ -15,12 +15,17 @@ body {
   background-color: $dark-color;
   }
 
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
 .header-bar {
   background-color: $base-color;
   height: 20%;
   width: 100%;
-  margin-top:2.5rem;
-  margin-bottom:2.5rem;
+  //margin-top:5rem;
+  margin-bottom:5rem;
   padding-top: 1.7rem;
   padding-bottom:2rem;
   position: sticky;
@@ -34,8 +39,8 @@ body {
   display: inline;
   font-size: 1.4rem;
 
-  padding-top: 1.6rem;
-  padding-bottom: 1.6rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 
   padding-left: 2rem;
   padding-right: 2rem;
