Worked on status page

--- a/views/status.pug
+++ b/views/status.pug
@@ -9,6 +9,12 @@ block content
             td IP Address:
             td= ipaddr
         tr(class="status-row")
-            td Protocal
+            td Protocol
             td= protocol
+        tr(class="status-row")
+            td Total Memory
+            td= totalMem + " GB"
+        tr(class="status-row")
+            td Free Memory
+            td= freeMem + " GB"
         
