Added to news page. Added movies page

--- a/views/news.pug
+++ b/views/news.pug
@@ -1,4 +1,6 @@
 extends layout
 
 block content
-    input(id="chat-input" type="textarea" placeholder="Enter your update here")
+    form(class="message-form" action="/news" method="POST")
+        input(id="chat-input" type="textarea" placeholder="Enter your update here")
+        input(id="chat-submit" type="submit" name="Submit")
