--- a/views/news.pug
+++ b/views/news.pug
@@ -1,6 +1,8 @@
 extends layout
 
+
 block content
+    
     form(class="message-form" action="/news" method="POST")
-        input(id="chat-input" type="textarea" placeholder="Enter your update here")
+        input(id="chat-input" type="textarea" name="message" placeholder="Enter your update here")
         input(id="chat-submit" type="submit" name="Submit")
