Added message history to news.js

--- a/views/news.pug
+++ b/views/news.pug
@@ -1,8 +1,15 @@
 extends layout
 
+mixin message(msg)
+    tr(class="message")
+        td(class="message-text")= msg.body
+        td(class="message-sender")= msg.sender
 
 block content
-    
+    div(class="messages-container")
+        for msg in prev_messages
+            tr
+                +message(msg)
     form(class="message-form" action="/news" method="POST")
         input(id="chat-input" type="textarea" name="message" placeholder="Enter your update here")
         input(id="chat-submit" type="submit" name="Submit")
