--- a/views/layout.pug
+++ b/views/layout.pug
@@ -3,6 +3,7 @@ html
   head
     title= title
     link(rel='stylesheet', href='general-style.css')
+    block specific-links
   body
     ul(class="header-bar")
         li(class="header-link" title="Home")
