--- a/views/news.pug
+++ b/views/news.pug
@@ -12,3 +12,6 @@ block content
     form(class="message-form" action="/news" method="POST")
         input(id="chat-input" type="textarea" name="message" placeholder="Enter your update here")
         input(id="chat-submit" type="submit" name="Submit")
+
+block specific-links
+    link(rel='stylesheet', href='news-style.css')
