--- a/views/layout.pug
+++ b/views/layout.pug
@@ -6,11 +6,11 @@ html
     block specific-links
   body
     ul(class="header-bar")
-        li(class="header-link" title="Home")
+        li(class="header-link", title="Home")
           a(href="/") Main
-        li(class="header-link" title="The latest stuff")
+        li(class="header-link", title="The latest stuff")
           a(href="/news") News
-        li(class="header-link" title="mo..")
+        li(class="header-link", title="mo..")
           a(href="/mo") Mo
     div(class="body-container")
       block content
