--- a/public/stylesheets/scss/general-style.scss
+++ b/public/stylesheets/scss/general-style.scss
@@ -24,7 +24,7 @@ a {
   background-color: $base-color;
   height: 20%;
   width: 100%;
-  //margin-top:5rem;
+  padding-left: 0;
   margin-bottom:5rem;
   padding-top: 1.7rem;
   padding-bottom:2rem;
