--- a/views/layout.pug
+++ b/views/layout.pug
@@ -8,9 +8,11 @@ html
     ul(class="header-bar")
         li(class="header-link", title="Home")
           a(href="/") Main
+        li(class="header-link", title="Calendar")
+          a(href="/calendar") Calendar
         li(class="header-link", title="The latest stuff")
           a(href="/news") News
-        li(class="header-link", title="mo..")
-          a(href="/mo") Mo
+        li(class="header-link", title="Movies")
+          a(href="/movies") Movies
     div(class="body-container")
       block content
