--- a/public/stylesheets/scss/news-style.scss
+++ b/public/stylesheets/scss/news-style.scss
@@ -4,43 +4,34 @@ $highlight-color: #773377;
 $dark-color: #212121;
 $contrast-font-col: white;
 
-
 .messages-container{
   border-color: $dark-color;
   border-width: 1px;
   border-style: solid;
   margin-bottom:1rem;
   width:100%;
-  overflow:scroll;
-  height:100%;
+  height: 20rem;
+  overflow-y:scroll;
 }
 
 .message{
-  margin:3rem;
-  height:2rem;
-
-  border-width:1px;
-  border-color:$dark-color;
-  border-style: solid;
-  border-collapse: collapse;
-
+  border-radius: 0.3rem;
   background-color: $highlight-color;
   color:$contrast-font-col;
-
+  margin: 1.5rem;
+  padding:0.5rem;
 }
 
-.message-text, .message-sender{
-  padding: 0.5rem;
-  height: 2rem;
+.message-sender{
+    display: inline;
+}
+
+.message-text{
+  display: inline;
 }
 
 .message-time{
   float:right;
-  padding: 1rem;
-}
-
-.message-form{
-  width:100%;
 }
 
 #chat-input{
