--- a/views/index.pug
+++ b/views/index.pug
@@ -2,7 +2,7 @@ extends layout
 
 block content
   h1= title
-  p Welcome to #{title}, here are some of the things I can do for layout
+  p Welcome to smashthehouse.website, here are some of the things I can do for layout
 
   div(class="preview-container")
     h2 Keep you up to date on stuff
