Finished adding meta tags for ogp compatibility (#7)

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,6 +2,10 @@ doctype html
 html
   head
     title= title
+    meta(property="og:title", content="SmashTheHouse")
+    meta(property="og:type", content="website")
+    meta(property="og:url", content="http://smashthehouse.website")
+    meta(property="og:image", content="https://i1.sndcdn.com/avatars-000218739603-yeyinf-t500x500.jpg")
     link(rel='stylesheet', href='general-style.css')
     block specific-links
   body
