--- a/views/index.pug
+++ b/views/index.pug
@@ -5,11 +5,14 @@ block content
   p Welcome to smashthehouse.website, here are some of the things I can do for layout
 
   div(class="preview-container")
+    h2 Help you pick movies
+    iframe(src="http://smashthehouse.website/movies?partial=true")
+  div(class="preview-container")
     h2 Keep you up to date on stuff
-    iframe(src="news")
+    iframe(src="http://smashthehouse.website/news?partial=true")
   div(class="preview-container")
     h2 Help you keep track of calendar events
-    iframe(src="calendar")
+    iframe(src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;src=ppv0m1mm5m3142tobio8oh630c%40group.calendar.google.com&amp;color=%232F6309&amp;ctz=America%2FNew_York")
 
 block specific-links
   link(rel='stylesheet', href='home-style.css')
