--- a/views/news.pug
+++ b/views/news.pug
@@ -8,6 +8,8 @@ mixin message(msg)
 
 block content
     div(class="messages-container")
+        if(!db_connected)
+            div(id="db-connection-err") Database is not connected
         for msg in prev_messages
             +message(msg)
     form(class="message-form", action="/news", method="POST")
@@ -17,5 +19,5 @@ block content
 
 block specific-links
     link(rel='stylesheet', href='news-style.css')
-    script(type="text/javascript", src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js")
+    script(type="text/javascript", src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js")
     script(src="/javascripts/news.js")
