--- a/public/stylesheets/scss/global-style.scss
+++ b/public/stylesheets/scss/global-style.scss
@@ -10,21 +10,12 @@ $std-padding: 20pt;
 body {
   font-family: "Lucida Grande", Helvetica, Arial, sans-serif; 
   font-size: 1rem;
-  margin-bottom: 8rem;
   cursor: default;
   background-color: $dark-color;
   }
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
 
-iframe {
-  border-style: solid;
-}
-
-.header-bar {
+.nav-bar {
   background-color: $base-color;
   height: 20%;
   width: 100%;
@@ -36,7 +27,7 @@ iframe {
   top:0;
 }
 
-.header-link {
+.nav-link {
   margin: 5%;
   color: $contrast-font-col;
   border-radius: 10pt;
@@ -51,20 +42,12 @@ iframe {
 
 }
 
-.header-link:hover{
+.nav-link:hover{
   background-color: $highlight-color;
   transition: 0.2s;
 }
 
-.header-link:not(hover){
+.nav-link:not(hover){
   background-color: inherit;
   transition: 0.2s;
-}
-
-.body-container{
-  width:50%;
-  max-width:80rem;
-  margin: 0 auto;
-  padding:5rem;
-  background-color:white;
 }
