--- a/views/layout.pug
+++ b/views/layout.pug
@@ -9,6 +9,10 @@ html
     link(rel='stylesheet', href='global-style.css')
     block specific-links
   body
-    ul(class="nav-bar")
+    div.navbar
+      div.helloLink
+        div.navLink Hello
+      div.worldLink
+        div.navLink World
     div.grid-container
       block content
